--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1><span>Test Rapide sur branche Main</span></h1>
+    <h1><span>Test Rapide Git</span></h1>
     <div class="box">The Box</div>
     <div class="box box2 ">New2</div>
 </body>
